Trim redundant comments and tighten error handling
Comment cleanup (code is for a senior audience — drop javadoc that only
restates the annotation/signature it sits on):
- Drop "microservice entry point" leads on the @SpringBootApplication classes
  and the "Wires ... to the path" one-liner on @Configuration/@Entity/@Mapper
  and Spring Data repository interfaces.
- Collapse the duplicated ConcurrentHashMap#compute explanation on
  GameRepository into a single note on the update method.
- Drop the "Wire representation of a" DTO leads, keeping the @param docs.

Code:
- Rename SessionService#liveStateIfAny -> liveStateIfPresent and document the
  empty (game-not-yet-created) case.
- Use unnamed lambda parameter in SimulationService's move delay, matching the
  rest of the codebase; use getFirst() over get(0) in BoardTest.
- Remove unused exception constructors (GameEngineCommunicationException and
  SessionNotFoundException cause-taking overloads).

Error handling:
- Enable RFC 7807 problemdetails so framework-level client errors (malformed
  body, wrong method, etc.) render as ProblemDetail with the right status,
  covering the gaps the explicit handlers don't. Add a game-engine test for
  unreadable JSON -> 400 problem+json.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0173jcWZjBqHmhMepESV7JVm